directory list and select

--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
+    "fs-extra": "^10.1.0",
     "pinia": "^2.0.11",
     "quasar": "^2.6.0",
+    "uuidv4": "^6.2.13",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0"
   },
