--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@quasar/extras": "^1.0.0",
     "fs-extra": "^10.1.0",
+    "howler": "^2.2.3",
     "mime-types": "^2.1.35",
     "pinia": "^2.0.11",
     "quasar": "^2.6.0",
