--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mime-types": "^2.1.35",
     "pinia": "^2.0.11",
     "quasar": "^2.6.0",
+    "request": "^2.88.2",
     "uuidv4": "^6.2.13",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0"
