--- a/package.json
+++ b/package.json
@@ -14,12 +14,17 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
+    "@types/spotify-web-api-node": "^5.0.7",
+    "dotenv": "^16.0.2",
+    "express": "^4.18.1",
     "fs-extra": "^10.1.0",
     "howler": "^2.2.3",
     "mime-types": "^2.1.35",
+    "opener": "^1.5.2",
     "pinia": "^2.0.11",
     "quasar": "^2.6.0",
     "request": "^2.88.2",
+    "spotify-web-api-node": "^5.0.2",
     "uuidv4": "^6.2.13",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0"
