--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "start": "yarn build && electron ."
   },
   "dependencies": {
-    "vue": "^3.2.37"
+    "vue": "^3.2.37",
+    "vue-router": "4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.1.0",
