--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start": "yarn build && electron ."
   },
   "dependencies": {
+    "vite-svg-loader": "^3.6.0",
     "vue": "^3.2.37",
     "vue-router": "4"
   },
