--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@electron-toolkit/preload": "^1.0.2",
     "@electron-toolkit/utils": "^1.0.2",
     "lowdb": "^3.0.0",
+    "pinia": "^2.0.23",
     "uuid": "^9.0.0",
     "vite-svg-loader": "^3.6.0",
     "vue": "^3.2.37",
