--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@electron-toolkit/utils": "^1.0.2",
     "howler": "^2.2.3",
     "lowdb": "^3.0.0",
+    "node-id3": "^0.2.3",
     "pinia": "^2.0.23",
     "uuid": "^9.0.0",
     "vite-svg-loader": "^3.6.0",
@@ -32,7 +33,7 @@
     "@histoire/plugin-vue": "^0.11.3",
     "@vitejs/plugin-vue": "^3.1.0",
     "electron": "^20.2.0",
-    "histoire": "^0.11.3",
+    "histoire": "^0.11.5",
     "sass": "^1.55.0",
     "typescript": "^4.6.4",
     "vite": "^3.1.0",
