--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "electron-squirrel-startup": "^1.0.0",
     "fs-extra": "10.1.0",
     "howler": "^2.2.3",
+    "jsmediatags": "^3.9.7",
     "lowdb": "^3.0.0",
     "mime-types": "^2.1.35",
     "node-id3": "^0.2.3",
